--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.clevertap.android:clevertap-android-sdk:3.7.0'
+    implementation 'com.clevertap.android:clevertap-android-sdk:3.8.0'
+    implementation 'com.clevertap.android:clevertap-segment-android:1.1.7'
+    implementation 'com.segment.analytics.android:analytics:4.2.6'
+
 
     implementation 'com.google.android.exoplayer:exoplayer:2.10.6'
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.6'
