--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,8 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0"
+
+    implementation 'io.branch.sdk.android:library:5.0.3'
+
 }
 apply plugin: 'com.google.gms.google-services'
