--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.ctdemo"
-        minSdkVersion 17
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.1"
@@ -26,24 +26,40 @@ android {
     dataBinding {
         enabled = true
     }
-}
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
-    implementation 'com.clevertap.android:clevertap-android-sdk:3.6.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
 
-    implementation 'com.google.firebase:firebase-messaging:17.3.3'
-    implementation 'com.google.android.gms:play-services-base:16.0.1'
+    implementation "com.clevertap.android:clevertap-android-sdk:4.0.0"
+
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.google.android.gms:play-services-base:17.5.0'
+
+    implementation "com.android.installreferrer:installreferrer:2.1"
+    // Mandatory for v3.6.4 and above
+
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'//MANDATORY for App Inbox
-    implementation "com.google.android.material:material:1.2.0-alpha03"
+    implementation "com.google.android.material:material:1.3.0-alpha03"
 
     implementation 'com.github.IslamKhSh:CardSlider:0.4'
+
+    implementation "com.google.android.exoplayer:exoplayer:2.11.5"
+    implementation "com.google.android.exoplayer:exoplayer-hls:2.11.5"
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.11.5"
 
 }
 apply plugin: 'com.google.gms.google-services'
