--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,11 @@
 
         <meta-data
             android:name="CLEVERTAP_ACCOUNT_ID"
-            android:value="W6Z-8RW-485Z" />
+            android:value="449-W7Z-775Z" />
 
         <meta-data
             android:name="CLEVERTAP_TOKEN"
-            android:value="02b-160" />
+            android:value="1a0-c44" />
 
         <meta-data
             android:name="CLEVERTAP_REGION"
