Integrated push templates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,9 @@
             android:name="CLEVERTAP_TOKEN"
             android:value="1a0-c44" />
 
-        <meta-data
+        <!--<meta-data
             android:name="CLEVERTAP_REGION"
-            android:value="us1"/>
+            android:value="us1"/>-->
 
         <meta-data
             android:name="CLEVERTAP_USE_GOOGLE_AD_ID"
@@ -53,6 +53,26 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <service
+            android:name="com.clevertap.pushtemplates.PTNotificationIntentService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.clevertap.PT_PUSH_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <receiver
+            android:name="com.clevertap.pushtemplates.PTPushNotificationReceiver"
+            android:exported="false"
+            android:enabled="true">
+        </receiver>
+
+        <receiver
+            android:name="com.clevertap.pushtemplates.PushTemplateReceiver"
+            android:exported="false"
+            android:enabled="true">
+        </receiver>
 
         <meta-data
             android:name="FCM_SENDER_ID"
