--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
 
-    implementation "com.clevertap.android:clevertap-android-sdk:4.0.0"
+    implementation 'com.clevertap.android:push-templates:0.0.6'
+    implementation 'com.clevertap.android:clevertap-android-sdk:4.0.2'
 
     implementation 'com.google.firebase:firebase-messaging:21.0.0'
     implementation 'com.google.android.gms:play-services-base:17.5.0'
